tests/valid/test_array_51.wyal
assert:
   forall(int[] xs, int[] ys, int i):
      if:
          ys == xs[i:=0]
      then:
          ys[i] == 0