tests/invalid/test_054.wyal
assert:
  forall (int[] xs, int[] ys, int[] zs):
    if:
       |xs| <= |ys|
       |ys| <= |zs|
    then:
       |xs| < |ys|